// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render the default notification checkbox 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NotifCheckBox
    section={
      Section {
        "classId": "1210",
        "crn": "13502",
        "host": "neu.edu",
        "lastUpdateTime": 1511131914029,
        "meetings": Array [
          Meeting {
            "endDate": "2017-12-07T00:00:00.000Z",
            "profs": Array [
              "Jennifer Anne Shire",
            ],
            "startDate": "2017-09-07T00:00:00.000Z",
            "times": Array [
              Array [
                Object {
                  "end": "1970-01-06T11:30:00.000Z",
                  "start": "1970-01-06T09:50:00.000Z",
                },
              ],
            ],
            "where": "Snell Engineering Center 108",
          },
        ],
        "online": false,
        "seatsCapacity": 19,
        "seatsRemaining": 0,
        "subject": "CS",
        "termId": "201810",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
        "waitCapacity": 0,
        "waitRemaining": 0,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "checked": false,
      "onChange": [Function],
      "toggle": true,
      "type": "checkbox",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "checked": false,
        "onChange": [Function],
        "toggle": true,
        "type": "checkbox",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`render the read only notification checkbox 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NotifCheckBox
    section={
      Section {
        "classId": "1210",
        "crn": "14404",
        "host": "neu.edu",
        "lastUpdateTime": 1511131914065,
        "meetings": Array [
          Meeting {
            "endDate": "2017-12-07T00:00:00.000Z",
            "profs": Array [
              "Jennifer Anne Shire",
            ],
            "startDate": "2017-09-07T00:00:00.000Z",
            "times": Array [
              Array [
                Object {
                  "end": "1970-01-06T13:25:00.000Z",
                  "start": "1970-01-06T11:45:00.000Z",
                },
              ],
            ],
            "where": "Ryder Hall 431",
          },
        ],
        "online": false,
        "seatsCapacity": 19,
        "seatsRemaining": 0,
        "subject": "CS",
        "termId": "201810",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
        "waitCapacity": 0,
        "waitRemaining": 0,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "checked": false,
      "onChange": [Function],
      "toggle": true,
      "type": "checkbox",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "checked": false,
        "onChange": [Function],
        "toggle": true,
        "type": "checkbox",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
